--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,8 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag    'application', media: 'all' %>
+    <%= javascript_bundle_tag("javascripts") %>
+    <%= javascript_bundle_tag("styles") %>
   </head>
 
   <body>
